--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,9 +6,12 @@ name: Node.js CI
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'front/**'
   pull_request:
     branches: [ main ]
-
+    paths:
+      - 'front/**'
 jobs:
   build:
 
