--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,11 +7,11 @@ on:
   push:
     branches: [ main ]
     paths:
-      - 'front/**'
+      - 'front/*'
   pull_request:
     branches: [ main ]
     paths:
-      - 'front/**'
+      - 'front/*'
 jobs:
   build:
 
